# esp-template

./: Cargo.toml  README.md  build.rs  pre-script.rhai
.github/workflows/: ci.yml
riscv/: .gitpod.Dockerfile  Cargo.toml  cargo-generate.toml  diagram.json  wokwi.toml
riscv/.cargo/: config.toml
riscv/.devcontainer/: Dockerfile  devcontainer.json
riscv/scripts/: flash.sh  run-wokwi.sh
riscv/src/: main.rs
src/: main.rs
xtensa/: Cargo.toml  cargo-generate.toml  diagram.json  wokwi.toml
xtensa/.cargo/: config.toml
xtensa/.devcontainer/: Dockerfile  devcontainer.json
xtensa/docs/: README.md
xtensa/scripts/: flash.sh  run-wokwi.sh
xtensa/src/: main.rs
