[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
{% if mcu == "esp32c3" -%}
{{ mcu }}-hal = "0.5.0"
{% elsif mcu == "esp32c2" -%}
{{ mcu }}-hal = "0.3.0"
{% endif -%}
{% if alloc -%}
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
{% endif -%}
esp-backtrace = { version = "0.4.0", features = ["{{ mcu }}", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.11", optional = true }

[features]
default = ["rt"]
rt = ["riscv-rt"]

